# llvm_exercises

./: README.md  main  test.bc  test.s
MyPasses/PointerPrintPass/: CMakeLists.txt  FunctionCallerTracker.cpp  FunctionLevelPass.cpp  MyPass.cpp  README.md  compile_commands.json  example.bc  example.cpp  example.ll  example_opt.ll  test.bc  test.cpp  test.ll  test_opt.bc  test_opt.ll
MyPasses/PointerPrintPass/.cache/clangd/index/: MyPass.cpp.92E25149C3EE5114.idx
MyPasses/SimplePass/: BasicBlockCountPass.cpp  CMakeLists.txt  test.cpp  test.ll
archived/: main.ll  test  test.ll
basics/: register.bc  register.ll  register.s
cfi/: a.out  cfi_icall  cfi_icall.cpp  cfi_unrelated_cast  cfi_vcall  forward_edge_vcall.cpp  hello.ll  illegal.cpp  no_cfi_icall  no_cfi_unrelated_cast  no_cfi_vcall  no_safe_stack.ll  no_safe_stack.s  no_shadow_stack.s  safe_stack.c  safe_stack.ll  safe_stack.s  safe_stack_2.ll  shadow_stack.c  sp_safe_stack.s  test_cfi  test_cfi.cpp  test_cfi_1.cpp  test_cfi_2  test_cfi_2.cpp  test_cfi_2_nvcall  test_cfi_2_nvcall.s  test_cfi_2_vcall  test_icall  test_icall.cpp  test_icall_safe  unrelated_cast.cpp  unsafe_stack.s
libraries/: interposition1.c  interposition2.c  main.c  main2  main3
